# lifecycle

./: .gitignore  .mcp.json  .oxlintrc.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile  lefthook.yml  lifecycle.json  package.json  turbo.json
apps/desktop/src-tauri/: .gitignore  ARCHITECTURE.md  Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/native/: lifecycle_native_overlay.m  lifecycle_native_platform.m  lifecycle_native_terminal.m
apps/desktop/src-tauri/resources/docker/sandbox/: Dockerfile
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/capabilities/: bridge.rs  desktop_bridge.rs  mod.rs  rpc.rs  targets.rs
apps/desktop/src-tauri/src/capabilities/agents/: commands.rs  query.rs
apps/desktop/src-tauri/src/capabilities/app/: commands.rs  context_menu.rs  mod.rs
apps/desktop/src-tauri/src/capabilities/files/: commands.rs  file.rs  mod.rs  open.rs
apps/desktop/src-tauri/src/capabilities/git/: commands.rs
apps/desktop/src-tauri/src/capabilities/plan/: commands.rs  query.rs
apps/desktop/src-tauri/src/capabilities/process/: commands.rs
apps/desktop/src-tauri/src/capabilities/projects/: commands.rs
apps/desktop/src-tauri/src/capabilities/workspaces/: archive.rs  checkout_type.rs  commands.rs  controller.rs  create.rs  destroy.rs  ensure.rs  environment.rs  environment_graph.rs  file.rs  git.rs  git_watcher.rs  harness.rs  identity.rs  kind.rs  manifest.rs  mod.rs  naming.rs  open.rs  paths.rs  ports.rs  preview.rs  query.rs  rename.rs  service.rs  shared.rs  start.rs  state_machine.rs  stop.rs  terminal.rs  test_support.rs  title.rs
apps/desktop/src-tauri/src/platform/: app_config.rs  auth.rs  db.rs  diagnostics.rs  lifecycle_cli.rs  lifecycle_root.rs  mod.rs  ports.rs  preview_proxy.rs  process_manager.rs  user_shell_env.rs
apps/desktop/src-tauri/src/platform/git/: mod.rs  pull_request.rs  status.rs  worktree.rs
apps/desktop/src-tauri/src/platform/migrations/: 0001_baseline.sql  0001_init.sql  0001_initial_schema.sql  0003_agent_sessions.sql  (+16 more)
apps/desktop/src-tauri/src/shared/: errors.rs  lifecycle_events.rs  mod.rs
apps/tui/: Cargo.toml  build.rs  package.json  tsconfig.json
apps/tui/scripts/: dev.ts
apps/tui/share/: shell-integration.sh
apps/tui/src/: app.rs  app.tsx  bridge.rs  debug.rs  events.rs  index.tsx  lifecycle.rs  lifecycle.ts  main.rs  pty.ts  selection.rs  shell.rs  shell.ts  sidebar-state.ts  sidebar.rs  terminal.rs  tmux-terminal.ts
apps/tui/src/lib/: cli.ts  keys.ts  tmux-border-repair.test.ts  tmux-border-repair.ts
apps/tui/src/panels/: mod.rs
apps/tui/src/panels/environment/: mod.rs  render.rs
apps/tui/src/panels/version_control/: mod.rs  render.rs
apps/tui/src/ui/: button.tsx  canvas.rs  canvas.tsx  extensions.rs  git-dialog.tsx  git_dialog.rs  header.rs  header.tsx  mod.rs  sidebar.rs  sidebar.tsx  stack-panel.tsx  status-bar.tsx  status_bar.rs  vc-panel.tsx
apps/tui/src/vt/: fallback.rs  ghostty.rs  mod.rs
(+1656 files in other folders)
