[package]
name = "lifecycle-tui"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

[[bin]]
name = "lifecycle-tui"
path = "src/main.rs"

[features]
default = ["vt-ghostty"]
vt-ghostty = ["dep:libghostty-vt"]
vt-vt100 = ["dep:vt100"]

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
anyhow = "1"
libc = "0.2"
notify = "7"
dirs = "6"
signal-hook = "0.3"
ureq = { version = "2", features = ["json"] }
tungstenite = "0.24"
urlencoding = "2"

# VT backends (feature-gated)
libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs.git", optional = true }
vt100 = { version = "0.15", optional = true }
