[package]
name = "lifecycle-desktop"
version = "0.1.0"
description = "Lifecycle Desktop"
authors = ["Lifecycle"]
edition = "2021"

[lib]
name = "lifecycle_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Lifecycle"
path = "src/main.rs"

[build-dependencies]
cc = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bollard = "0.18"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
futures-util = "0.3"
libc = "0.2"
portable-pty = "0.9"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
  "NSResponder",
  "NSScrollView",
  "NSView",
] }
